# leetcode_in_python_v2

./: .gitignore  README.md  pyproject.toml
001_final_value_of_variable_after_performing_operations/: README.md
final_value_of_variable_after_performing_operations/: README.md  main.py
prerequisite_concepts/arithmetic/: 001_getting_max_of_two_numbers_with_max.md  002_getting_max_of_multiple_numbers.md
prerequisite_concepts/list/: 001_iterating_items_in_a_list.md  002_checking_length_of_a_list_with_len.md
prerequisite_concepts/str/: 001_split_string_by_delimiter.md  002_iterating_characters_in_a_string_with_a_for_loop.md  003_checking_if_a_string_is_equal_to_another_string.md
questions/final_value_of_variable_after_performing_operations/: README.md
questions/maximum_number_of_words_found_in_sentence/: README.md  approach_1.py  approach_2.py
unit_tests/final_value_of_variable_after_performing_operations/: test_final_value_of_variable_after_performing_operations.py
unit_tests/maximum_number_of_words_found_in_sentence/: test_approach_one.py  test_approach_two.py
